# parameter-golf-lab

./: .gitignore  AGENTS.md  Makefile  PR_NOTES.md  README.md  pyproject.toml  requirements-dev.txt  requirements-hf.txt  requirements.txt
.github/workflows/: pages.yml
configs/: baseline.yaml  chat_tiny.yaml  gqa.yaml  hf_chat_mps.yaml  progressive_context.yaml  quant_lowrank.yaml  ttt_lora.yaml
docs/: experiment_matrix.md
docs/assets/prompts/: 01-infographic-cover-parameter-golf-lab.md
docs/lessons/: 01_tiny_lm.md  02_progressive_context.md  03_gqa.md  04_quantization.md  05_lowrank.md  06_ttt.md  07_chat_quality.md
mini_parameter_golf_agent_handoff/: ACCEPTANCE_CRITERIA.md  AGENTS.md  ARCHITECTURE.md  DEPENDENCIES.md  EXPERIMENT_MATRIX.md  IMPLEMENTATION_PLAN.md  PROJECT_BRIEF.md  PROMPT_FOR_CODEX.md  QUALITY_CHECKS.md  README_TEMPLATE.md  TUTORIAL_PLAN.md
scripts/: chat.py  evaluate.py  export_hf_chat_corpus.py  make_tiny_chat_corpus.py  make_tiny_corpus.py  quantize.py  report_size.py  run_ttt.py  train.py
src/mini_pgolf/: __init__.py  __main__.py  attention.py  checkpoint.py  config.py  context.py  data.py  evaluate.py  generate.py  lora.py  lowrank.py  metrics.py  model.py  quantization.py  size_report.py  tokenizer.py  train.py  ttt.py  utils.py
tests/: test_core.py
tutorial-site/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
tutorial-site/src/: App.tsx  styles.css
tutorial-site/tests/: tutorial.spec.ts
