[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-parameter-golf"
version = "0.1.0"
description = "A teaching-oriented mini Parameter Golf repository."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.3,<2.6",
  "numpy>=1.26,<3",
  "pyyaml>=6.0,<7",
  "tqdm>=4.66,<5",
  "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<25",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["mini_pgolf"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
